Add directory change before verifying deployment container status

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,8 @@ jobs:
       - name: Verify Deployment
         run: |
           ssh -i ~/.ssh/azure_key ${{ env.AZURE_VM_USERNAME }}@${{ env.AZURE_VM_HOST }} << 'EOF'
+            cd ~/app
+            
             echo "=== Container Status ==="
             docker ps --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
             
