feat: Implement Redis-based cart service with CRUD operations
- Added StackExchange.Redis package for Redis integration.
- Created CartRedis project with necessary models, contracts, and services.
- Implemented ICartStore interface and RedisCartStore class for cart management.
- Added API endpoints for cart operations (GET, POST, PUT, DELETE).
- Updated frontend services to interact with the new cart API.
- Configured Docker for the CartRedis service and Redis.
- Updated appsettings for connection strings and service URLs.
- Enhanced error handling and validation in cart operations.

--- a/Frontend/appsettings.json
+++ b/Frontend/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Services": {
     "AuthService": "http://authservice",
-    "CatalogService": "http://catalogservice"
+    "CatalogService": "http://catalogservice",
+    "CartService": "http://cartredis"
   }
 }
