--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,24 @@ services:
       - Services__CatalogService=http://catalogservice
       - Services__CartService=http://cartredis
 
+  gateway:
+    build:
+      context: ./Gateway
+      dockerfile: Dockerfile
+    container_name: gateway
+    ports:
+      - "8081:80"
+    depends_on:
+      - authservice
+      - catalogservice
+      - cartredis
+    networks:
+      - microservices-network
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ServiceEndpoints__AuthService=http://authservice
+      - ServiceEndpoints__CatalogService=http://catalogservice
+      - ServiceEndpoints__CartService=http://cartredis
   cartredis:
     build:
       context: ./CartRedis
