feat: Add CartRedis and gateway projects to solution and deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,9 @@ jobs:
             docker-compose.yml \
             AuthService \
             CatalogService \
+            CartRedis \
             Frontend \
+            gateway \
             ${{ env.AZURE_VM_USERNAME }}@${{ env.AZURE_VM_HOST }}:~/app/
 
       # 7. Deploy on Azure VM
