--- a/GatewayService/dockerfile
+++ b/GatewayService/dockerfile
@@ -5,15 +5,15 @@ ENV ASPNETCORE_URLS=http://+:80
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-COPY ["gateway.csproj", "./"]
-RUN dotnet restore "gateway.csproj"
+COPY ["GatewayService.csproj", "./"]
+RUN dotnet restore "GatewayService.csproj"
 COPY . .
-RUN dotnet build "gateway.csproj" -c Release -o /app/build
+RUN dotnet build "GatewayService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "gateway.csproj" -c Release -o /app/publish
+RUN dotnet publish "GatewayService.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "gateway.dll"]
+ENTRYPOINT ["dotnet", "GatewayService.dll"]
